--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ a {
 }
 .section__title::before {
   position: absolute;
-  width: 60%;
+  width: 75%;
   height: 1px;
   content: "";
   background-color: black;
@@ -138,7 +138,7 @@ a {
 }
 .section__title::after {
   content: "";
-  width: 65px;
+  width: 50px;
   height: 8px;
   background-color: var(--first-color-base);
   position: absolute;
@@ -2082,6 +2082,230 @@ header .nav__connexion {
   color: #0077b5;
 }
 .contact .social .flex__social .copyright {
+  font-family: var(--body-font);
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.connexion {
+  padding-block: 4rem;
+  color: #2f2e41;
+}
+.connexion .section__title {
+  font-size: 36px;
+  margin-top: 0;
+}
+.connexion .connexion__form {
+  margin-top: 75px;
+}
+.connexion .connexion__form .input__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  margin-bottom: 30px;
+}
+.connexion .connexion__form .input__container label {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding-inline: 5px;
+  font-family: var(--body-font);
+  font-size: 22px;
+  font-style: italic;
+  font-weight: var(--font-semi-bold);
+  text-transform: uppercase;
+  background-color: white;
+  position: relative;
+  left: 10px;
+  z-index: 2;
+  -webkit-transition: 200ms linear;
+  transition: 200ms linear;
+}
+.connexion .connexion__form .input__container input {
+  all: unset;
+  position: relative;
+  width: 98%;
+  top: -10px;
+  border: 2px solid #2f2e41;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: var(--body-font);
+  font-size: 18px;
+  height: 60px;
+  -webkit-transition: 200ms linear;
+  transition: 200ms linear;
+}
+.connexion .connexion__form .input__container input:is(:focus) {
+  border-color: var(--first-color-base);
+  color: var(--first-color-very-dark);
+}
+.connexion .connexion__form .input__container input:is(:focus) + label {
+  color: var(--first-color-dark);
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:checked,
+.connexion .connexion__form .input__container-save [type=checkbox]:not(:checked) {
+  position: absolute;
+  left: -9999px;
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:checked + label,
+.connexion .connexion__form .input__container-save [type=checkbox]:not(:checked) + label {
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  line-height: 20px;
+  display: inline-block;
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:checked + label:before,
+.connexion .connexion__form .input__container-save [type=checkbox]:not(:checked) + label:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #2f2e41;
+  border-radius: 5px;
+  background: #fff;
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:checked + label:after,
+.connexion .connexion__form .input__container-save [type=checkbox]:not(:checked) + label:after {
+  content: "";
+  width: 12px;
+  height: 12px;
+  background: var(--first-color-dark);
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border-radius: 2px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:not(:checked) + label:after {
+  opacity: 0;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+.connexion .connexion__form .input__container-save [type=checkbox]:checked + label:after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+.connexion .connexion__form .input__container-save label {
+  font-size: 20px;
+  font-family: var(--body-font);
+  text-transform: uppercase;
+}
+.connexion .connexion__form .connexion__form-btn {
+  width: 100%;
+  height: 57px;
+  margin-top: 45px;
+  font-size: 20px;
+  font-family: var(--body-font);
+  font-weight: var(--font-semi-bold);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.connexion .links__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 15px;
+  margin-top: 45px;
+}
+.connexion .links__container .connexion__link {
+  font-family: var(--body-font);
+  font-size: 16px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.connexion .social {
+  margin-top: 50px;
+}
+@media (min-width: 769px) {
+  .connexion .social {
+    margin-top: 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .connexion .social {
+    margin-top: 0;
+  }
+}
+.connexion .social .section__title {
+  font-size: 28px;
+}
+@media (min-width: 1200px) {
+  .connexion .social .section__title {
+    margin-top: 0;
+  }
+}
+@media (min-width: 992px) {
+  .connexion .social .section__title::after, .connexion .social .section__title::before {
+    display: none;
+  }
+}
+.connexion .social .flex__social {
+  margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 25px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (min-width: 1200px) {
+  .connexion .social .flex__social {
+    margin-top: 20px;
+  }
+}
+.connexion .social .flex__social .flex__social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+}
+.connexion .social .flex__social .flex__social-icons a:hover i {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+.connexion .social .flex__social .flex__social-icons a i {
+  -webkit-transition: 150ms linear;
+  transition: 150ms linear;
+  font-size: 42px;
+}
+.connexion .social .flex__social .flex__social-icons .facebook:hover {
+  color: #3b5998;
+}
+.connexion .social .flex__social .flex__social-icons .instagram:hover {
+  color: #e5355b;
+}
+.connexion .social .flex__social .flex__social-icons .linkedin:hover {
+  color: #0077b5;
+}
+.connexion .social .flex__social .copyright {
   font-family: var(--body-font);
   letter-spacing: 0.05em;
   text-transform: uppercase;
