--- a/assets/scss/globals/_brakpoints.scss
+++ b/assets/scss/globals/_brakpoints.scss
@@ -4,6 +4,10 @@
 	@include mediaXXS {
 		padding-inline: 10px;
 	}
+	@include mediaXS {
+		width: 580px;
+		margin-inline: auto;
+	}
 	@include mediaSM {
 		width: 720px;
 		margin-inline: auto;
