--- a/assets/scss/pages/_connexion.scss
+++ b/assets/scss/pages/_connexion.scss
@@ -4,128 +4,226 @@
 	.section__title {
 		font-size: 36px;
 		margin-top: 0;
+		@include mediaMD {
+			font-size: 50px;
+		}
 	}
-	.connexion__form {
-		margin-top: 75px;
-		.input__container {
+	.flex__connexion {
+		@include mediaSM {
 			display: flex;
-			flex-direction: column-reverse;
-			margin-bottom: 30px;
-			label {
-				width: max-content;
-				padding-inline: 5px;
-				font-family: var(--body-font);
-				font-size: 22px;
-				font-style: italic;
-				font-weight: var(--font-semi-bold);
-				text-transform: uppercase;
-				background-color: white;
-				position: relative;
-				left: 10px;
-				z-index: 2;
-				transition: 200ms linear;
+			column-gap: 30px;
+		}
+		.form__container {
+			@include mediaSM {
+				width: 380px;
 			}
-			input {
-				all: unset;
-				position: relative;
-				width: 98%;
-				top: -10px;
-				border: 2px solid #2f2e41;
-				border-radius: 5px;
-				padding-left: 15px;
-				font-size: var(--body-font);
-				font-size: 18px;
-				height: 60px;
-				transition: 200ms linear;
-				&:is(:focus) {
-					border-color: var(--first-color-base);
-					color: var(--first-color-very-dark);
+			@include mediaMD {
+				width: 480px;
+			}
+			.connexion__form {
+				margin-top: 75px;
+				.input__container {
+					display: flex;
+					flex-direction: column-reverse;
+					margin-bottom: 30px;
+					@include mediaSM {
+						margin-bottom: 20px;
+					}
+					label {
+						width: max-content;
+						padding-inline: 5px;
+						font-family: var(--body-font);
+						font-size: 22px;
+						font-style: italic;
+						font-weight: var(--font-semi-bold);
+						text-transform: uppercase;
+						background-color: white;
+						position: relative;
+						left: 10px;
+						z-index: 2;
+						transition: 200ms linear;
+						@include mediaSM {
+							font-size: 20px;
+						}
+					}
+					input {
+						all: unset;
+						position: relative;
+						width: 98%;
+						top: -10px;
+						border: 2px solid #2f2e41;
+						border-radius: 5px;
+						padding-left: 15px;
+						font-size: var(--body-font);
+						font-size: 18px;
+						height: 60px;
+						transition: 200ms linear;
+						@include mediaSM {
+							height: 55px;
+						}
+						&:is(:focus) {
+							border-color: var(--first-color-base);
+							color: var(--first-color-very-dark);
+						}
+						&:is(:focus) + label {
+							color: var(--first-color-dark);
+						}
+					}
 				}
-				&:is(:focus) + label {
-					color: var(--first-color-dark);
+				.input__container-save {
+					// ====== START CHANGE ALL THE CHECKBOX DESIGN ============
+					[type='checkbox']:checked,
+					[type='checkbox']:not(:checked) {
+						position: absolute;
+						left: -9999px;
+					}
+					[type='checkbox']:checked + label,
+					[type='checkbox']:not(:checked) + label {
+						position: relative;
+						padding-left: 35px;
+						cursor: pointer;
+						line-height: 20px;
+						display: inline-block;
+					}
+					[type='checkbox']:checked + label:before,
+					[type='checkbox']:not(:checked) + label:before {
+						content: '';
+						position: absolute;
+						left: 0;
+						top: 0;
+						width: 18px;
+						height: 18px;
+						border: 1px solid #2f2e41;
+						border-radius: 5px;
+						background: #fff;
+					}
+					[type='checkbox']:checked + label:after,
+					[type='checkbox']:not(:checked) + label:after {
+						content: '';
+						width: 12px;
+						height: 12px;
+						background: var(--first-color-dark);
+						position: absolute;
+						top: 4px;
+						left: 4px;
+						border-radius: 2px;
+						-webkit-transition: all 0.2s ease;
+						transition: all 0.2s ease;
+					}
+					[type='checkbox']:not(:checked) + label:after {
+						opacity: 0;
+						-webkit-transform: scale(0);
+						transform: scale(0);
+					}
+					[type='checkbox']:checked + label:after {
+						opacity: 1;
+						-webkit-transform: scale(1);
+						transform: scale(1);
+					}
+					// ====== END CHANGE ALL THE CHECKBOX DESIGN ============
+					label {
+						font-size: 20px;
+						font-family: var(--body-font);
+						text-transform: uppercase;
+						@include mediaSM {
+							font-size: 16px;
+						}
+					}
+				}
+				.connexion__form-btn {
+					width: 100%;
+					height: 57px;
+					margin-top: 45px;
+					font-size: 20px;
+					font-family: var(--body-font);
+					font-weight: var(--font-semi-bold);
+					text-transform: uppercase;
+					cursor: pointer;
+					@include mediaSM {
+						font-size: 18px;
+						margin-top: 35px;
+					}
+				}
+			}
+			.links__container {
+				display: flex;
+				flex-direction: column;
+				row-gap: 15px;
+				margin-top: 45px;
+				.connexion__link {
+					font-family: var(--body-font);
+					font-size: 16px;
+					text-align: center;
+					text-transform: uppercase;
+					transition: 150ms linear;
+					@include mediaSM {
+						&:hover {
+							padding-left: 15px;
+						}
+						text-align: start;
+					}
 				}
 			}
 		}
-		.input__container-save {
-			// ====== START CHANGE ALL THE CHECKBOX DESIGN ============
-			[type='checkbox']:checked,
-			[type='checkbox']:not(:checked) {
-				position: absolute;
-				left: -9999px;
-			}
-			[type='checkbox']:checked + label,
-			[type='checkbox']:not(:checked) + label {
+		.image__container {
+			display: none;
+			@include mediaSM {
+				display: block;
+				align-self: flex-end;
 				position: relative;
-				padding-left: 35px;
-				cursor: pointer;
-				line-height: 20px;
-				display: inline-block;
 			}
-			[type='checkbox']:checked + label:before,
-			[type='checkbox']:not(:checked) + label:before {
-				content: '';
-				position: absolute;
-				left: 0;
-				top: 0;
-				width: 18px;
-				height: 18px;
-				border: 1px solid #2f2e41;
-				border-radius: 5px;
-				background: #fff;
+			.social__media-icons {
+				display: none;
+				@include mediaSM {
+					display: flex;
+					flex-direction: column;
+					list-style: none;
+					row-gap: 12px;
+					position: absolute;
+					right: 30px;
+					top: -10px;
+				}
+				@include mediaMD {
+					top: initial;
+					right: 40px;
+				}
+				a {
+					font-size: 32px;
+					transition: 150ms linear;
+					@include mediaMD {
+						font-size: 42px;
+					}
+				}
+				.facebook:hover {
+					color: #3b5998;
+				}
+				.instagram:hover {
+					color: #e5355b;
+				}
+				.linkedin:hover {
+					color: #0077b5;
+				}
 			}
-			[type='checkbox']:checked + label:after,
-			[type='checkbox']:not(:checked) + label:after {
-				content: '';
-				width: 12px;
-				height: 12px;
-				background: var(--first-color-dark);
-				position: absolute;
-				top: 4px;
-				left: 4px;
-				border-radius: 2px;
-				-webkit-transition: all 0.2s ease;
-				transition: all 0.2s ease;
+			.connexion__image {
+				display: none;
+				@include mediaSM {
+					display: block;
+					width: 300px;
+				}
+				@include mediaMD {
+					width: 410px;
+				}
 			}
-			[type='checkbox']:not(:checked) + label:after {
-				opacity: 0;
-				-webkit-transform: scale(0);
-				transform: scale(0);
-			}
-			[type='checkbox']:checked + label:after {
-				opacity: 1;
-				-webkit-transform: scale(1);
-				transform: scale(1);
-			}
-			// ====== END CHANGE ALL THE CHECKBOX DESIGN ============
-			label {
-				font-size: 20px;
-				font-family: var(--body-font);
-				text-transform: uppercase;
-			}
-		}
-		.connexion__form-btn {
-			width: 100%;
-			height: 57px;
-			margin-top: 45px;
-			font-size: 20px;
-			font-family: var(--body-font);
-			font-weight: var(--font-semi-bold);
-			text-transform: uppercase;
-			cursor: pointer;
 		}
 	}
-	.links__container {
-		display: flex;
-		flex-direction: column;
-		row-gap: 15px;
-		margin-top: 45px;
-		.connexion__link {
-			font-family: var(--body-font);
-			font-size: 16px;
-			text-align: center;
-			text-transform: uppercase;
+
+	.flex__info {
+		display: none;
+		@include mediaSM {
+			display: flex;
 		}
 	}
+
 	.social {
 		margin-top: 50px;
 		@include mediaSM {
@@ -136,12 +234,18 @@
 		}
 		.section__title {
 			font-size: 28px;
+			@include mediaSM {
+				font-size: 32px;
+			}
+			@include mediaMD {
+				font-size: 38px;
+			}
 			@include mediaLG {
 				margin-top: 0;
 			}
 			&::after,
 			&::before {
-				@include mediaMD {
+				@include mediaSM {
 					display: none;
 				}
 			}
@@ -152,6 +256,9 @@
 			flex-direction: column;
 			row-gap: 25px;
 			align-items: center;
+			@include mediaSM {
+				margin-top: 20px;
+			}
 			@include mediaLG {
 				margin-top: 20px;
 			}
